# qa-clean

./: .gitignore  ARCHITECTURE.md  CLEANUP_SUMMARY.md  CONDA_SETUP.md  Makefile  POSTGRES_SETUP.md  README.md  RELEASE_GUIDE.md  RELEASE_TEMPLATE.md  benchmark_clustering.py  benchmark_clustering_engines.py  environment-cpu.yml  environment-dev.yml  environment.yml  install.bat  install.sh  meta.yaml  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: release.yml
configs/: config_variants.md
data/raw/: README.md
scripts/: build_and_release.sh  run_pipeline.sh  upgrade_faiss.sh
src/: pipeline.py  run_all.py
src/configs/: config.yaml
src/qa_clean/: cli.py  clustering.py  config.py  faiss_store.py  models.py  processor.py  utils.py  vector_factory.py  vector_store.py
src/recall/: base.py  faiss_provider.py
src/stages/: stage1_filter.py  stage2_recall.py  stage3_rerank.py  stage4_cluster.py  stage4_cluster_networkx.py  stage4_cluster_original.py  stage4_cluster_parallel.py  stage5_answer_govern.py
src/utils/: cn_text.py  config.py  environment.py  io_utils.py  logger.py  metrics.py  text_sim.py
tests/: README.md  __init__.py  test_config.yaml  test_faiss.py  test_runner.py
tests/stages/: __init__.py  test_stage1_filter.py
tests/utils/: __init__.py  test_cn_text.py  test_config.py  test_io_utils.py  test_text_sim.py
