[build-system]
requires = ["hatchling>=1.8.0"]  # 最新稳定版本
build-backend = "hatchling.build"

[project]
name = "qa-clean"
version = "0.1.0"
description = "QA 数据清洗与治理工具（聚合去重、聚类合并、代表问题输出）"
readme = "README.md"
requires-python = ">=3.11"  # 升级到Python 3.11，性能提升10-60%
license = { text = "MIT" }
authors = [
  { name = "Your Name" }
]
keywords = ["nlp", "qa", "cleaning", "dedup", "clustering", "reranker", "pgvector"]
dependencies = [
  "pandas>=2.1.0",           # 最新稳定版本，更好的性能和功能
  "openpyxl>=3.1.2",         # 最新稳定版本
  "sentence-transformers>=2.2.2",  # 最新稳定版本
  "torch>=2.1.0",            # 最新稳定版本，更好的性能和稳定性
  "psycopg2-binary>=2.9.9",  # PostgreSQL连接器
  "scikit-learn>=1.3.2",     # 最新稳定版本，更好的性能
  "numpy>=1.24.0",           # 支持NumPy 2.x，更好的性能
  "tqdm>=4.66.0",            # 最新稳定版本
  "jieba>=0.42.1",           # 最新稳定版本
]

[project.scripts]
qa-clean = "qa_clean.cli:main"

[project.optional-dependencies]
dev = [
  "ruff>=0.1.6",             # 最新稳定版本，更好的代码检查
  "mypy>=1.7.1",             # 最新稳定版本，更好的类型检查
  "pytest>=7.4.3",           # 最新稳定版本，更好的测试框架
  "types-tqdm",               # 类型提示
  "pandas-stubs",             # pandas类型提示
]

# 重要说明：
# FAISS GPU/CPU 需要通过 conda-forge 安装，不能通过pip安装
# 安装命令：
# conda install -c conda-forge faiss-gpu>=1.12.0
# 或者
# conda install -c conda-forge faiss-cpu>=1.12.0

[tool.ruff]
line-length = 100
target-version = "py311"  # 升级到Python 3.11目标版本

[tool.mypy]
python_version = "3.11"  # 升级到Python 3.11
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
packages = ["src/qa_clean"]


