[build-system]
requires = ["hatchling>=1.8.0"]  # 最新稳定版本
build-backend = "hatchling.build"

[project]
name = "qa-clean"
version = "0.1.0"
description = "中文问答净化与同义合并流水线（无分词，仅FAISS，高精准）"
readme = "README.md"
requires-python = ">=3.11"  # 升级到Python 3.11，性能提升10-60%
license = { text = "MIT" }
authors = [
  { name = "Your Name" }
]
keywords = ["nlp", "qa", "cleaning", "dedup", "clustering", "faiss", "chinese", "no-jieba"]
dependencies = [
  "pandas>=2.1.0",           # 最新稳定版本，更好的性能和功能
  "pyarrow>=12.0.0",         # Parquet文件读写支持
  "openpyxl>=3.1.2",         # Excel文件读写支持
  "sentence-transformers>=2.2.2",  # 最新稳定版本
  "torch>=2.1.0",            # 最新稳定版本，更好的性能和稳定性
  "scikit-learn>=1.3.2",     # 最新稳定版本，更好的性能
  "numpy>=1.24.0",           # 支持NumPy 2.x，更好的性能
  "tqdm>=4.66.0",            # 最新稳定版本
  "pyyaml>=6.0",            # YAML配置文件解析
  "regex>=2023.10.3",       # 正则表达式增强
  "networkx>=3.0",          # 图算法库，支持多种聚类算法
  "python-igraph>=0.10.0",  # 高性能图算法库（可选）
  "leidenalg>=0.9.0",       # Leiden聚类算法（可选）
]

# 启动方式：python run.py -i your_data.xlsx

[project.optional-dependencies]
dev = [
  "ruff>=0.1.6",             # 代码检查和格式化
  "mypy>=1.7.1",             # 类型检查
  "matplotlib>=3.7.0",       # 可选图表生成
  "rapidfuzz>=3.5.0",        # 可选高性能编辑距离
]

# 重要说明：
# FAISS GPU/CPU 需要通过 conda-forge 安装，不能通过pip安装
# 安装命令：
# conda install -c conda-forge faiss-gpu>=1.12.0
# 或者
# conda install -c conda-forge faiss-cpu>=1.12.0

[tool.ruff]
line-length = 100
target-version = "py311"  # 升级到Python 3.11目标版本

[tool.mypy]
python_version = "3.11"  # 升级到Python 3.11
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true



